[project]
name = "agent-assignment"
version = "0.1.0"
description = "Take home assignment"
authors = [{name = "Callum McMahon", email = "mcmahon.callum@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "openai>1",
    "httpx",
    "hishel>=0.1.1",
    "markdownify>=0.14.1",
    "readability>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
